	WMDeleteTimerWithClientData(void *cdata);
	WMDeleteTimerHandler(WMHandlerID handlerID);
	WMAddIdleHandler(WMCallback *callback, void *cdata);
	WMDeleteIdleHandler(WMHandlerID handlerID);
	WMAddInputHandler(int fd, int condition, WMInputProc *proc,
        		  void *clientData);
	WMDeleteInputHandler(WMHandlerID handlerID);
- added progress indicator widget


changes since wmaker 0.53.0:
............................

- added balloon help
- fixed a bug with setting initial path in browsers.
- added WMSetButtonImageDimsWhenDisabled()
- changed simple callback/notifications to delegate-like stuff. Affected
  widgets are:
  	WMBrowser
	- WMSetBrowserFillProc() was replaced with WMSetBrowserDelegate
	- WMBrowserDidScrollNotification was replaced with a delegate callback

	WMTextField (not completed yet)
	The notifications will still work, but using the delegate is preferable

  How to convert old code to delegate callbacks:
  	1 - create a variable (static or dynamic) of the type of the 
	    delegate for the widget type.
	2 - Replace the notification observers with the equivalent 
	    delegate callbacks. 
	3 - Put pointers to the callbacks in the delegate variable.

	Take a look in wfilepanel.c to see how it is used there.

- changed W_ViewProcedureTable to delegates
	This will only affect user created widgets. If you have a custom
	widget, you will need to update the callbacks and the declaration
	of the W_ViewProcedureTable variable to be a W_ViewDelegate,
	which is declared in WINGsP.h  To setup the delegate, assign
	the delegate variable to view->delegate.

- WMTextField
	Removed all the didChange notifications that were sent when the text
	was changed programmatically. Only changes made by user interaction
	will be notified now. If you need the old behaviour, send notifications
	manually when you change the text.

- added WMTabView
- added WMGetColorPanelColor(WMColorPanel *panel)
- made WMGetUDStringForKey() to only return a reference to the string, not a